syntax = "proto3";

option java_multiple_files = true;
option java_package = "vk.itmo.teamgray.sharded.storage.node.client";

package vk.itmo.teamgray.sharded.storage;

service NodeClientService {
  rpc GetKey (GetKeyRequest) returns (GetKeyResponse);

  rpc SetKey (SetKeyRequest) returns (SetKeyResponse);

  rpc SetFromFile (SetFromFileRequest) returns (SetFromFileResponse);
}

message GetKeyRequest {
  string key = 1;
}

message GetKeyResponse {
  string value = 1;
}

message SetKeyRequest {
  string key = 1;
  string value = 2;
}

message SetKeyResponse {
  bool success = 1;
}

message SetFromFileRequest {
  //TODO Negotiate format
  string filePath = 1;
}

message SetFromFileResponse {
  //TODO Negotiate format
  bool success = 1;
  string message = 2;
}
